fixing build directory

--- a/.github/workflows/actions-push.yml
+++ b/.github/workflows/actions-push.yml
@@ -8,19 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: client
+        working-directory: ./
     steps:
       - name: Checkout 
         uses: actions/checkout@v2
       - name: Set-up Node 
         uses: actions/setup-node@v1
       - run: npm install
-      - run: npm run test
       - run: npm run build 
       - name: Deploy 
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages 
-          build_dir: client/build
+          build_dir: build
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
