--- a/.github/workflows/actions-push.yml
+++ b/.github/workflows/actions-push.yml
@@ -20,6 +20,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages 
-          build_dir: build
+          build_dir: ./build
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
