--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+"homepage": "http://soletscode.github.io/movie-challenge",
   "name": "movie-challenege",
   "version": "0.1.0",
   "private": true,
