found issue. Needed to add homepage to package.json for GH pages to work

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-
+"homepage": "https://soletscode.github.io/movie-challenge",
   "name": "movie-challenge",
   "version": "0.1.0",
   "private": true,
