--- a/.github/workflows/actions-push.yml
+++ b/.github/workflows/actions-push.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm install
       - run: npm run build 
         env:
-          REACT_APP_API_KEY: ${{secrets.REACT_APP_API_KEY}}
+          REACT_APP_GH_API_KEY: ${{secrets.REACT_APP_GH_API_KEY}}
       - name: Deploy 
         uses: crazy-max/ghaction-github-pages@v2
         with:
